--- a/thesis.tex
+++ b/thesis.tex
@@ -11,12 +11,11 @@
   \colorbox{bgcolor}{\oldtexttt{#1}}
 }
 
-% \setmainfont [ Path = fonts/
-%     , UprightFont = *-Regular
-%     , BoldFont = *-Bold
-%     , ItalicFont = *-Italic
-%     , BoldItalicFont = *-BoldItalic
-% ] {TitilliumWeb}
+\setmainfont [Path = fonts/,
+    BoldFont = TitilliumWeb-Bold.ttf,
+    ItalicFont = TitilliumWeb-Italic.ttf,
+    BoldItalicFont = TitilliumWeb-BoldItalic.ttf
+] {TitilliumWeb-Regular.ttf}
 
 % style blockquotes
 % change style of quote, see also https://tex.stackexchange.com/a/436253/114857
