Add reentrancy example and continue on Chapter I

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -8,3 +8,23 @@
   keywords = {trusted},
 }
 
+@online{applecoreaudio,
+  author = {Apple},
+  title = {Audio Unit v3 Plug-Ins},
+  organization = {Apple},
+  date = {2023-10-23},
+  urldate = {2023-10-23},
+  url = {https://developer.apple.com/documentation/audiotoolbox/audio_unit_properties},
+  keywords = {trusted},
+}
+
+@online{ueaudio,
+  author = {Unreal Engine},
+  title = {Hear the Future of UE Audio | Unreal Fest 2022},
+  organization = {Unreal Engine},
+  date = {2023-10-23},
+  urldate = {2023-10-23},
+  url = {https://www.youtube.com/watch?v=q9pFsI9Cq9c&t=621s},
+  keywords = {trusted},
+}
+
