--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -28,3 +28,23 @@
   keywords = {trusted},
 }
 
+@online{lowlatency,
+  author = {Timur Doumler},
+  title = {What is Low Latency?},
+  organization = {CppNow},
+  date = {2023-08-18},
+  urldate = {2023-10-23},
+  url = {https://www.youtube.com/watch?v=5uIsadq-nyk},
+  keywords = {trusted},
+}
+
+@online{realtime101,
+  author = {David Rowland & Fabian Renn Giles},
+  title = {Real time 101},
+  organization = {Meeting Cpp},
+  date = {2020-04-30},
+  urldate = {2023-10-23},
+  url = {https://www.youtube.com/watch?v=ndeN983j_GQ&t=1370s},
+  keywords = {trusted},
+}
+
