--- a/thesis.tex
+++ b/thesis.tex
@@ -27,6 +27,12 @@
     \endorigfigure
 }
 
+% footnotes at the bottom
+\usepackage[bottom]{footmisc}
+
+% make multiline tables work
+\usepackage{array,calc}
+
 % style blockquotes
 % change style of quote, see also https://tex.stackexchange.com/a/436253/114857
 \usepackage[most]{tcolorbox}
