Further Improve Chapter I

--- a/content/20_qt.md
+++ b/content/20_qt.md
@@ -1,7 +1,25 @@
 # Chapter 2: The Qt Framework
 
-- Provide a comprehensive introduction to the Qt framework, its history, and its key features.
-- Discuss the advantages of using Qt for software development.
+Qt is a dual licensed framework for creating cross-platform graphical user
+interfaces that run on various platforms such as Linux, Windows, macOS,
+Android, and embedded systems with little to no change in the underlying
+codebase. Originally developed by Trolltech, a Norwegian software company, in
+1992, Qt was later acquired by Nokia in 2008, and is now actively maintained
+and developed by 'The Qt Company'.
+
+<Also talk about language bindings as Qt For Pythons PySide6>
+
+It is available under commercial license agreement, which allows for
+development of proprietery/commercial software where it's not required to open
+source the code, or under GNU (L)GPL, where the compliement with the terms and
+condition of the respective license.
+
+<Write text about the two ways to create GUI's: Widgets and QML>
+
+<Talk about the tradeoff of each, mention software rendering (Widgets),
+and utilizing the hardware (Quick) and any other facts as declarative lang>
+
+<Talk a little about Qt6 and it's improvements, mention QRHI, and its correlation>
 
 ## 2.2 Qt Modules and Architecture, QtGRPC
 
