Finalize Section I - IV

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -38,3 +38,16 @@
   keywords = {trusted},
 }
 
+@article{performanceprotobufIoT,
+  author = {"Srđan Popić & Bojan Mrazovac & Dražen Pezer & Nikola Teslić"},
+  title = {Performance evaluation of using Protocol Buffers in the Internet of Things communication},
+  year = {2016},
+  keywords = {gRPC, Protocol Buffers, IoT},
+}
+
+@article{protobufcasestudy,
+  author = {"Maharaja Lakhani"},
+  title = {Protocol Buffers: an Overview (Case study in C++)},
+  year = {2014},
+  keywords = {gRPC, Protocol Buffers},
+}
