--- a/thesis.tex
+++ b/thesis.tex
@@ -33,6 +33,9 @@
 % make multiline tables work
 \usepackage{array,calc}
 
+% code-blocks should wrap as well
+\usepackage{fvextra}
+\DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
 % style blockquotes
 % change style of quote, see also https://tex.stackexchange.com/a/436253/114857
 \usepackage[most]{tcolorbox}
