Improve sections and restructure the layout

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -1,10 +1,27 @@
 @online{cppn2074,
   author = {Daveed Vandevoorde},
   title = {Plugins in C++},
-  organization = {Wikibooks},
   date = {2006-09-07},
   urldate = {2023-07-23},
   url = {https://www.open-std.org/JTC1/sc22/wg21/docs/papers/2006/n2074.pdf},
+  keywords = {trusted},
+}
+
+@online{rtaudio,
+  author = {Gary P. Scavone},
+  title = {RtAudio: A Cross-Platform C++ Class for Realtime Audio Input/Output},
+  date = {2002-10-01},
+  urldate = {2023-11-14},
+  url = {https://ccrma.stanford.edu/~gary/papers/icmc2002c.pdf},
+  keywords = {trusted},
+}
+
+@online{audiolatency,
+  author = {Joseph Timoney, Victor Lazzarini, Rudi Villing, Dawid Czesak, Sean O'Leary},
+  title = {Approaches for constant audio latency on Android},
+  date = {2015-12-15},
+  urldate = {2023-11-14},
+  url = {https://mural.maynoothuniversity.ie/6664/},
   keywords = {trusted},
 }
 
@@ -15,26 +32,6 @@
   date = {2023-10-23},
   urldate = {2023-10-23},
   url = {https://developer.apple.com/documentation/audiotoolbox/audio_unit_properties},
-  keywords = {trusted},
-}
-
-@online{lowlatency,
-  author = {Timur Doumler},
-  title = {What is Low Latency?},
-  organization = {CppNow},
-  date = {2023-08-18},
-  urldate = {2023-10-23},
-  url = {https://www.youtube.com/watch?v=5uIsadq-nyk},
-  keywords = {trusted},
-}
-
-@online{realtime101,
-  author = {David Rowland & Fabian Renn Giles},
-  title = {Real time 101},
-  organization = {Meeting Cpp},
-  date = {2020-04-30},
-  urldate = {2023-10-23},
-  url = {https://www.youtube.com/watch?v=ndeN983j_GQ&t=1370s},
   keywords = {trusted},
 }
 
