Add related work section

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -55,7 +55,14 @@
 }
 
 @article{ipc_microservices,
-author = {Benyamin Shafabakhsh, Robert Lagerström, Simon Hacks},
+  author = {Benyamin Shafabakhsh, Robert Lagerström, Simon Hacks},
   title = {Evaluating the Impact of Inter Process Communication in Microservice Architectures},
+  year = 2020,
+}
+
+@article{elk_audio_os,
+  author = {Luca Turchet, Carlo Fischione},
+  title = {Elk Audio OS: An Open Source Operating System for the Internet of Musical Things},
+  url = {https://dl.acm.org/doi/pdf/10.1145/3446393},
   year = 2020,
 }
