Clean-up sections 1-4

--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -7,6 +7,15 @@
   keywords = {trusted},
 }
 
+@online{gof,
+  author = {Erich Gamma, Richard Helm, Ralph Johnson, John Vlissides},
+  title = {Design Patterns: Elements of Reusable Object-Oriented Software},
+  date = {1994-10-21},
+  urldate = {2023-07-23},
+  url = {https://www.oreilly.com/library/view/design-patterns-elements/0201633612/},
+  keywords = {trusted},
+}
+
 @online{rtaudio,
   author = {Gary P. Scavone},
   title = {RtAudio: A Cross-Platform C++ Class for Realtime Audio Input/Output},
